--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,40 @@
       type="image/png"
       href="https://img.icons8.com/ultraviolet/40/000000/chat.png"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <a href="#" id="join">Join Room</a>
+    <div class="container">
+      <a href="#" id="join">Join Room</a>
 
-    <div class="chat-container">
-      <input type="text" placeholder="Enter Message" id="message" />
-      <button type="submit" id="send">Send</button>
+      <div class="input-group my-2" id="input-area">
+        <input type="text" placeholder="Enter Message" id="message" />
+        <button type="submit" class="btn btn-primary ml-2" id="send">
+          Send
+        </button>
+      </div>
     </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="./client.js"></script>
