--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,12 @@
       <a href="#" id="join">Join Room</a>
 
       <div class="input-group my-2" id="input-area">
-        <input type="text" placeholder="Enter Message" id="message" />
+        <input
+          type="text"
+          class="px-2"
+          placeholder="Enter Message"
+          id="message"
+        />
         <button type="submit" class="btn btn-primary ml-2" id="send">
           Send
         </button>
