added user id to the top of chat, next step is to add images beside message

--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,14 @@
   </head>
   <body>
     <div class="container">
-      <a href="#" id="join">Join Room</a>
+      <a href="#" class="my-2 d-flex justify-content-center" id="join"
+        >Join Room</a
+      >
 
-      <div class="input-group my-2" id="input-area">
+      <div
+        class="input-group my-2 d-flex justify-content-center"
+        id="input-area"
+      >
         <input
           type="text"
           class="px-2"
@@ -32,6 +37,7 @@
           Send
         </button>
       </div>
+      <span class="d-flex justify-content-center"></span>
     </div>
 
     <script
